--- a/backup-commons/build.gradle
+++ b/backup-commons/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'java'
 apply plugin: 'maven'
 
 group 'com.opsgenie.tools'
-version '0.23.0'
+version '0.23.1'
 
 sourceCompatibility = 1.6
 targetCompatibility = 1.6
@@ -23,4 +23,7 @@ dependencies {
     compile "com.beust:jcommander:1.48"
     compile 'org.eclipse.jgit:org.eclipse.jgit:4.5.0.201609210915-r'
     compile "com.opsgenie.oas:opsgenie-sdk-swagger:1.0.10"
+    compile ('com.fasterxml.jackson.core:jackson-databind:2.9.10') {
+        force = true
+    }
 }
